K8S/listings-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: listings-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: listingservice
  template:
    metadata:
      labels:
        app: listingservice
    spec:
      containers:
        - name: listingservice
          image: 286938589922.dkr.ecr.eu-central-1.amazonaws.com/student-acquire:listings_service
---
apiVersion: v1
kind: Service
metadata:
  name: listings-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: listingservice
  ports:
    - name: listingservice
      protocol: TCP
      port: 80
      targetPort: 5000
