K8S/listings-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: listingnpservice-srv
spec:
  type: NodePort
  selector:
    app: listingservice
  ports:
    - name: listingservice
      protocol: TCP
      port: 80
      targetPort: 5000
