K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: c5a64610f3e4b4242355416d12d290df.gr7.eu-central-1.eks.amazonaws.com
      http:
        paths:
          - path: /api/listings
            pathType: Prefix
            backend:
              service:
                name: listings-clusterip-srv
                port:
                  number: 80
          - path: /api/u/listings
            pathType: Prefix
            backend:
              service:
                name: users-clusterip-srv
                port:
                  number: 80
